k8s/cluster-apps/evcc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evcc
  labels:
    app: evcc
    app.kubernetes.io/name: evcc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evcc
  template:
    metadata:
      labels:
        app: evcc
        app.kubernetes.io/name: evcc
    spec:
      containers:
        - name: evcc
          image: evcc/evcc:latest@sha256:114f3912f191a7ab15b72f2e4c146e3d0c991034a42d2368e4f2aea3f4f54dc5
          command:
            - evcc
          ports:
            - containerPort: 7070
              name: http
            - containerPort: 8887
              name: udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /etc/evcc.yaml
              subPath: evcc.yaml
            - name: data
              mountPath: /root/.evcc
      volumes:
        - name: config
          configMap:
            name: evcc-config
        - name: data
          hostPath:
            path: /config/evcc
            type: DirectoryOrCreate
