k8s/cluster-apps/evcc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evcc-ingress
  namespace: evcc
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-body-size-8m@kubernetescrd
  labels:
    app: evcc
spec:
  ingressClassName: traefik
  rules:
    - host: evcc.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evcc
                port:
                  name: http
  tls:
    - hosts:
        - evcc.k8s.javydekoning.com
